--- a/WPF.MDI/WPF.MDI.csproj
+++ b/WPF.MDI/WPF.MDI.csproj
@@ -103,6 +103,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Themes\Windows10.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -175,6 +179,14 @@
     <Resource Include="Themes\Luna\TopMiddleUnfocused.png" />
     <Resource Include="Themes\Luna\TopRightFocused.png" />
     <Resource Include="Themes\Luna\TopRightUnfocused.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Themes\Windows10\Close.png" />
+    <Resource Include="Themes\Windows10\Close_Gray.png" />
+    <Resource Include="Themes\Windows10\Close_Inverted.png" />
+    <Resource Include="Themes\Windows10\Maximize.png" />
+    <Resource Include="Themes\Windows10\Minimize.png" />
+    <Resource Include="Themes\Windows10\Restore.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
